ConfigPanel: add haptic feedback when detecting gestures
vibrate for 50ms when detecting a gesture
allow to toggle haptic feedback

Change-Id: I38e21fbd93e9abb49680251413e1696c65479633

--- a/configpanel/res/xml/touchscreen_panel.xml
+++ b/configpanel/res/xml/touchscreen_panel.xml
@@ -37,7 +37,6 @@
         android:summary="@string/touchscreen_flashlight_gesture_summary" />
 
     <PreferenceCategory
-        android:key="navigation_slider_category"
         android:title="@string/notification_slider" >
 
         <ListPreference
@@ -63,6 +62,16 @@
             android:entries="@array/notification_slider_action_entries"
             android:entryValues="@array/notification_slider_action_entries"
             android:persistent="false" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/touchscreen_extras">
+
+        <SwitchPreference
+            android:key="touchscreen_haptic_feedback"
+            android:title="@string/haptic_feedback"
+            android:summary="@string/haptic_feedback_summary" />
 
     </PreferenceCategory>
 
